[package]
name = "lunaris_engine"
version = "0.0.3"
edition = "2024"
authors = ["Darklunaris <Darklunarisx@gmail.com>"]
description = "A collection of efficient algorithms implemented in Rust for real-world projects."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Darklunaris/lunaris_engine_rust"
keywords = ["algorithms", "data-structures", "rust", "library"]
categories = ["algorithms", "data-structures"]
documentation = "https://docs.rs/lunaris_engine"
homepage = "https://darklunaris.vercel.app/"

[dependencies]
num-traits = "0.2.19"
rand = "0.9.2"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false
